<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/attention_color"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:orientation="vertical"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="12dp">

                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_baseline_error_24" />

                <TextView
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:paddingStart="12dp"
                    android:text="@string/attention_mess"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <TextView
                android:id="@+id/message_id"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/attention_mess"
                tools:ignore="RtlSymmetry" />




        </LinearLayout>



        <Button
            android:visibility="gone"
            style="?android:attr/borderlessButtonStyle"
            android:backgroundTint="@color/attention_color"
            android:textColor="@color/black"
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/save_str"
            app:layout_constraintEnd_toStartOf="@+id/button_close"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_go_over"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/black"
            android:id="@+id/button_go_over"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/go_over_str"
            app:layout_constraintEnd_toStartOf="@+id/button_save"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:backgroundTint="@color/attention_color"
            android:textColor="@color/black"
            android:id="@+id/button_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/close_str"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_save"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>